[package]
name = "carbon_axelar_execute_relayer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
config = "0.13.4"
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
tokio-tungstenite = "0.21.0"
toml = "0.8.8"
url = "2.5.0"
serde_json = { version = "1.0.113", features = ["raw_value"] }
dotenvy = "0.15.7"
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "postgres", "bigdecimal", "json", "macros"] }
ethers = { version = "2.0.13", features = ["ws", "rustls"] }
futures = "0.3.30"
hex = "0.4.3"
anyhow = "1.0.79"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
bytes = "1.5.0"
