[package]
name = "carbon_axelar_execute_relayer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
config = "0.13.4"
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
tokio-tungstenite = "0.21.0"
toml = "0.8.8"
url = "2.5.0"
serde_json = { version = "1.0.113", features = ["raw_value"] }
dotenvy = "0.15.7"
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "postgres", "bigdecimal", "json", "macros"] }
ethers = { version = "2.0.13", features = ["ws", "rustls"] }
futures = "0.3.30"
hex = "0.4.3"
anyhow = "1.0.79"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
bytes = "1.5.0"
reqwest = "0.11.24"
urlencoding = "2.1.3"
prost = "0.12.4"
cosmrs = "0.16.0"
base64 = "0.21.7"
prost-types = "0.12.4"
chrono = { version = "0.4.33", features = ["serde"] }
cosmos-sdk-proto = "0.21.1"
pbjson-types = "0.6.0"
num-traits = "0.2.19"
bip39 = "2.0.0"
k256 = "0.13.3"
secp256k1 = "0.29.0"
pbkdf2 = "0.12.2"
bip32 = "0.5.1"

[build-dependencies]
prost-build = "0.12.4"
tonic = "0.12.3"
